--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
